flux/clusters/production/apps/hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: demo
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: hello-world
